including the citycountyfilter.js

--- a/state2city.html
+++ b/state2city.html
@@ -15,9 +15,11 @@
       <select id="cities1"></select>
     </div>
     <script src="state2city.js"></script>
+    <script src="citycountyfilter.js"></script>
     <script>
       bindCitySelectors('states', 'VA', 'cities', 'Abingdon');
       bindCitySelectors('states1', '', 'cities1', '');
+      getkeys('states1', '', 'cities1');
     </script>
   </body>
 </html>
